Fixed bug in the width of notifications
Wrapping had stopped, causing them to require horizontal scrolling.
Fixed with a single css line

--- a/less/new.less
+++ b/less/new.less
@@ -566,9 +566,9 @@ a:visited {
     float: left;
     margin-left: 4px;
     padding-left: 3px;
-    width: 300px;
+    width: 285px;
     margin-top: -1px;
-    
+    white-space: normal;   
 }
 
 .vertalignmiddle {
